--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/WhatsApp Image 2023-10-26 at 00.17.35.jpeg" alt="Endah Kurnia Fitri" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/Projects/6.jpeg" alt="Endah Kurnia Fitri" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-5">Endah Kurnia Fitri</h1>
       <p class="lead">University Student</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
